Added instructions for running game.jar