@@ -17,6 +17,10 @@ import javafx.stage.Stage;
 
 import java.util.HashSet;
 
+// a packaged executable called game.jar can be found at the root directory,
+// to run this on IntelliJ go to Run -> Edit Configurations -> VM options,
+// and add: --module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml,javafx.media
+
 public class Board extends Application {
 
     // Gameboard
